WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36973
[Qt] Some composition modes fail when color has alpha zero
https://bugs.webkit.org/show_bug.cgi?id=36973
Summary
[Qt] Some composition modes fail when color has alpha zero
qi
Reported
2010-04-01 11:43:06 PDT
LayoutTests/fast/canvas/canvas-composite-alpha.html failed at QtLauncher, as well as it works fine on Safari. Looks like Qt don't fully support composition.
Attachments
Proposed patch
(7.91 KB, patch)
2010-07-17 15:05 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
qi
Comment 1
2010-04-01 11:54:29 PDT
Create a Qt bug to close this one.
http://bugreports.qt.nokia.com/browse/QTWEBKIT-149
Andreas Kling
Comment 2
2010-07-17 15:05:23 PDT
Created
attachment 61890
[details]
Proposed patch
Andreas Kling
Comment 3
2010-07-19 07:08:38 PDT
Comment on
attachment 61890
[details]
Proposed patch Clearing flags on attachment: 61890 Committed
r63654
: <
http://trac.webkit.org/changeset/63654
>
Andreas Kling
Comment 4
2010-07-19 07:08:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug